# programming_languages_lab3

solution/: CMakeLists.txt
solution/include/: bmp.h  file.h  image.h  rotate.h
solution/src/: bmp.c  file.c  image.c  main.c  rotate.c
